--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -38,8 +38,14 @@
     <Reference Include="AForge.Video, Version=2.2.5.0, Culture=neutral, PublicKeyToken=cbfb6e07d173c401, processorArchitecture=MSIL">
       <HintPath>..\packages\AForge.Video.2.2.5\lib\AForge.Video.dll</HintPath>
     </Reference>
+    <Reference Include="BNITapCashDLL">
+      <HintPath>C:\Users\STN-COM-01\Desktop\SimulatorBNI\bin\Debug\BNITapCashDLL.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="pcsc-sharp">
+      <HintPath>C:\Users\STN-COM-01\Desktop\SimulatorBNI\bin\Debug\pcsc-sharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -56,12 +62,21 @@
   <ItemGroup>
     <Compile Include="API\DataResponse.cs" />
     <Compile Include="API\RESTAPI.cs" />
+    <Compile Include="Bank\BNI\BNI.cs" />
+    <Compile Include="Bank\BNI\Pcsc\Apdu.cs" />
+    <Compile Include="Bank\BNI\Pcsc\Helper.cs" />
+    <Compile Include="Bank\BNI\Pcsc\PcscProvider.cs" />
+    <Compile Include="Bank\BNI\Pcsc\PcscReader.cs" />
+    <Compile Include="Bank\BNI\Reader\Acr123U.cs" />
+    <Compile Include="Bank\BNI\Trx.cs" />
     <Compile Include="Cashier.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Cashier.Designer.cs">
       <DependentUpon>Cashier.cs</DependentUpon>
     </Compile>
+    <Compile Include="Bank\BNI\Exceptions\PcscException.cs" />
+    <Compile Include="Bank\BNI\Exceptions\ReaderException.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
