added an extra setting for IPv4 Live Camera

--- a/BNITapCash/App.config
+++ b/BNITapCash/App.config
@@ -22,6 +22,9 @@
             <setting name="RememberMe" serializeAs="String">
                 <value />
             </setting>
+            <setting name="IPAddressLiveCamera" serializeAs="String">
+                <value />
+            </setting>
         </BNITapCash.Properties.Settings>
     </userSettings>
 </configuration>
