--- a/BNITapCash/Properties/Settings.settings
+++ b/BNITapCash/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="RememberMe" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="IPAddressLiveCamera" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
