--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -41,6 +41,7 @@
     <Reference Include="BNITapCashDLL">
       <HintPath>C:\Users\STN-COM-01\Desktop\SimulatorBNI\bin\Debug\BNITapCashDLL.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data, Version=8.0.13.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -77,6 +78,7 @@
     </Compile>
     <Compile Include="Bank\BNI\Exceptions\PcscException.cs" />
     <Compile Include="Bank\BNI\Exceptions\ReaderException.cs" />
+    <Compile Include="DB\DBConnect.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +86,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Helper\TKHelper.cs" />
+    <Compile Include="Miscellaneous\FileMonitor\FileWatcher.cs" />
     <Compile Include="Miscellaneous\Loading.cs">
       <SubType>Form</SubType>
     </Compile>
