--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -70,27 +70,27 @@
     <Compile Include="Bank\BNI\Pcsc\PcscReader.cs" />
     <Compile Include="Bank\BNI\Reader\Acr123U.cs" />
     <Compile Include="Bank\BNI\Trx.cs" />
-    <Compile Include="Cashier.cs">
+    <Compile Include="Forms\Cashier.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Cashier.Designer.cs">
+    <Compile Include="Forms\Cashier.Designer.cs">
       <DependentUpon>Cashier.cs</DependentUpon>
     </Compile>
     <Compile Include="Bank\BNI\Exceptions\PcscException.cs" />
     <Compile Include="Bank\BNI\Exceptions\ReaderException.cs" />
     <Compile Include="DB\DBConnect.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Helper\TKHelper.cs" />
     <Compile Include="Miscellaneous\FileMonitor\FileWatcher.cs" />
-    <Compile Include="Miscellaneous\Loading.cs">
+    <Compile Include="Forms\Loading.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Miscellaneous\Loading.Designer.cs">
+    <Compile Include="Forms\Loading.Designer.cs">
       <DependentUpon>Loading.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
@@ -100,19 +100,19 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Setting.cs">
+    <Compile Include="Forms\Setting.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Setting.Designer.cs">
+    <Compile Include="Forms\Setting.Designer.cs">
       <DependentUpon>Setting.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Cashier.resx">
+    <EmbeddedResource Include="Forms\Cashier.resx">
       <DependentUpon>Cashier.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Miscellaneous\Loading.resx">
+    <EmbeddedResource Include="Forms\Loading.resx">
       <DependentUpon>Loading.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -120,7 +120,7 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Setting.resx">
+    <EmbeddedResource Include="Forms\Setting.resx">
       <DependentUpon>Setting.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
