--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -38,6 +38,9 @@
     <Reference Include="AForge.Video, Version=2.2.5.0, Culture=neutral, PublicKeyToken=cbfb6e07d173c401, processorArchitecture=MSIL">
       <HintPath>..\packages\AForge.Video.2.2.5\lib\AForge.Video.dll</HintPath>
     </Reference>
+    <Reference Include="AForge.Video.DirectShow">
+      <HintPath>C:\Users\STN-COM-01\Desktop\test\WebcamDll\AForge.Video.DirectShow.dll</HintPath>
+    </Reference>
     <Reference Include="BNITapCashDLL">
       <HintPath>C:\Users\STN-COM-01\Desktop\SimulatorBNI\bin\Debug\BNITapCashDLL.dll</HintPath>
     </Reference>
@@ -85,6 +88,7 @@
     <Compile Include="Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helper\Base64Helper.cs" />
     <Compile Include="Helper\TKHelper.cs" />
     <Compile Include="Miscellaneous\FileMonitor\FileWatcher.cs" />
     <Compile Include="Forms\Loading.cs">
@@ -93,6 +97,7 @@
     <Compile Include="Forms\Loading.Designer.cs">
       <DependentUpon>Loading.cs</DependentUpon>
     </Compile>
+    <Compile Include="Miscellaneous\Webcam\Webcam.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
