update additional setting for Database Configuration for settlement

--- a/BNITapCash/App.config
+++ b/BNITapCash/App.config
@@ -25,6 +25,18 @@
             <setting name="IPAddressLiveCamera" serializeAs="String">
                 <value />
             </setting>
+            <setting name="DBHost" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DBUsername" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DBName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DBPassword" serializeAs="String">
+                <value />
+            </setting>
         </BNITapCash.Properties.Settings>
     </userSettings>
 </configuration>
