--- a/BNITapCash/Properties/Settings.settings
+++ b/BNITapCash/Properties/Settings.settings
@@ -17,7 +17,16 @@
     <Setting Name="IPAddressLiveCamera" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="VehicleTypes" Type="System.Collections.Specialized.StringCollection" Scope="User">
+    <Setting Name="DBHost" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="DBUsername" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="DBName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="DBPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
