--- a/BNITapCash/App.config
+++ b/BNITapCash/App.config
@@ -37,6 +37,12 @@
             <setting name="DBPassword" serializeAs="String">
                 <value />
             </setting>
+            <setting name="TID" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="MID" serializeAs="String">
+                <value />
+            </setting>
         </BNITapCash.Properties.Settings>
     </userSettings>
 </configuration>
