update : added additional setting to setup image resolution of captured webcam
given default value : (480 x 360)

--- a/BNITapCash/App.config
+++ b/BNITapCash/App.config
@@ -43,6 +43,12 @@
             <setting name="MID" serializeAs="String">
                 <value />
             </setting>
+            <setting name="WebcamWidth" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WebcamHeight" serializeAs="String">
+                <value>0</value>
+            </setting>
         </BNITapCash.Properties.Settings>
     </userSettings>
 </configuration>
