--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -205,6 +205,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app_icon.ico" />
+    <None Include="Resources\webcam.png" />
     <None Include="Resources\mid.png" />
     <None Include="Resources\tid.jpg" />
     <None Include="Resources\id.png" />
