added Login setting for Live Camera (username & password) thus it can be accessed if there's any authentication required.

--- a/BNITapCash/App.config
+++ b/BNITapCash/App.config
@@ -49,6 +49,12 @@
             <setting name="WebcamHeight" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="LiveCameraUsername" serializeAs="String">
+                <value>admin</value>
+            </setting>
+            <setting name="LiveCameraPassword" serializeAs="String">
+                <value />
+            </setting>
         </BNITapCash.Properties.Settings>
     </userSettings>
 </configuration>
