--- a/BNITapCash/Properties/Settings.settings
+++ b/BNITapCash/Properties/Settings.settings
@@ -41,5 +41,11 @@
     <Setting Name="WebcamHeight" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="LiveCameraUsername" Type="System.String" Scope="User">
+      <Value Profile="(Default)">admin</Value>
+    </Setting>
+    <Setting Name="LiveCameraPassword" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
