--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -37,30 +37,30 @@
   <ItemGroup>
     <Reference Include="AForge, Version=2.2.5.0, Culture=neutral, PublicKeyToken=c1db6ff4eaa06aeb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DLL\AForge.dll</HintPath>
+      <HintPath>..\..\..\..\..\STN Internal\Project Ilugroup\Ilugroup 2019\DLL Tambahan\AForge.dll</HintPath>
     </Reference>
     <Reference Include="AForge.Video, Version=2.2.5.0, Culture=neutral, PublicKeyToken=cbfb6e07d173c401, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DLL\AForge.Video.dll</HintPath>
+      <HintPath>..\..\..\..\..\STN Internal\Project Ilugroup\Ilugroup 2019\DLL Tambahan\AForge.Video.dll</HintPath>
     </Reference>
     <Reference Include="AForge.Video.DirectShow, Version=2.2.5.0, Culture=neutral, PublicKeyToken=61ea4348d43881b7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DLL\AForge.Video.DirectShow.dll</HintPath>
+      <HintPath>..\..\..\..\..\STN Internal\Project Ilugroup\Ilugroup 2019\DLL Tambahan\AForge.Video.DirectShow.dll</HintPath>
     </Reference>
     <Reference Include="BNITapCashDLL, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DLL\BNITapCashDLL.dll</HintPath>
+      <HintPath>..\..\..\..\..\STN Internal\Project Ilugroup\Ilugroup 2019\AssetBNI\ToolsDevTapCash\PCSC_Tools\DLL\BNITapCashDLL.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=8.0.13.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DLL\MySql.Data.dll</HintPath>
+      <HintPath>..\..\..\..\..\STN Internal\Project Ilugroup\Ilugroup 2019\DLL Tambahan\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\..\..\..\STN Internal\Project Ilugroup\Ilugroup 2019\DLL Tambahan\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="pcsc-sharp, Version=3.6.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DLL\pcsc-sharp.dll</HintPath>
+      <HintPath>..\..\..\..\..\STN Internal\Project Ilugroup\Ilugroup 2019\AssetBNI\ToolsDevTapCash\PCSC_Tools\DLL\pcsc-sharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -214,6 +214,28 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app_icon.ico" />
+    <None Include="Resources\BG PUTIH22.png" />
+    <None Include="Resources\pelindo41.png" />
+    <None Include="Resources\main-header1.png" />
+    <None Include="Resources\main-footer-short1.png" />
+    <None Include="Resources\main-footer1.png" />
+    <None Include="Resources\main1.png" />
+    <None Include="Resources\login-header1.png" />
+    <None Include="Resources\ilugroup1.png" />
+    <None Include="Resources\logo_pelindo_gray.jpg1.png" />
+    <None Include="Resources\WP DISPENSER21.png" />
+    <None Include="Resources\WP DISPENSER1.png" />
+    <None Include="Resources\Group 31.png" />
+    <None Include="Resources\BG PUTIH21.png" />
+    <None Include="Resources\BG PUTIH1.png" />
+    <None Include="Resources\BG BIRU1.png" />
+    <None Include="Resources\reprint button1.png" />
+    <None Include="Resources\print report1.png" />
+    <None Include="Resources\missing ticket button1.png" />
+    <None Include="Resources\close button1.png" />
+    <None Include="Resources\minimize button1.png" />
+    <None Include="Resources\back button1.png" />
+    <None Include="Resources\logo di embos %281%29.png" />
     <None Include="Resources\webcam.png" />
     <None Include="Resources\mid.png" />
     <None Include="Resources\tid.jpg" />
