--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -106,6 +106,12 @@
     <Compile Include="Forms\DatabaseConfig.Designer.cs">
       <DependentUpon>DatabaseConfig.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\LostTicket.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\LostTicket.Designer.cs">
+      <DependentUpon>LostTicket.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\SignIn.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -214,6 +220,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app_icon.ico" />
+    <None Include="Resources\main-footer2.png" />
+    <None Include="Resources\icon setting1.png" />
+    <None Include="Resources\main-footer-short2.png" />
     <None Include="Resources\BG PUTIH22.png" />
     <None Include="Resources\pelindo41.png" />
     <None Include="Resources\main-header1.png" />
