refactored files and some codes.

--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -80,11 +80,14 @@
     <Compile Include="API\DataResponseObject.cs" />
     <Compile Include="API\RESTAPI.cs" />
     <Compile Include="Bank\BNI\BNI.cs" />
-    <Compile Include="Bank\BNI\Pcsc\Apdu.cs" />
-    <Compile Include="Bank\BNI\Pcsc\Helper.cs" />
-    <Compile Include="Bank\BNI\Pcsc\PcscProvider.cs" />
-    <Compile Include="Bank\BNI\Pcsc\PcscReader.cs" />
-    <Compile Include="Bank\BNI\Reader\Acr123U.cs" />
+    <Compile Include="Card\Mifare\Card.cs" />
+    <Compile Include="Card\Mifare\MifareCard.cs" />
+    <Compile Include="Constant\Constant.cs" />
+    <Compile Include="ReaderDevice\Pcsc\Apdu.cs" />
+    <Compile Include="ReaderDevice\Pcsc\Helper.cs" />
+    <Compile Include="ReaderDevice\Pcsc\PcscProvider.cs" />
+    <Compile Include="ReaderDevice\Pcsc\PcscReader.cs" />
+    <Compile Include="ReaderDevice\Reader\Acr123U.cs" />
     <Compile Include="Bank\BNI\Trx.cs" />
     <Compile Include="Forms\About.cs">
       <SubType>Form</SubType>
@@ -98,8 +101,8 @@
     <Compile Include="Forms\Cashier.Designer.cs">
       <DependentUpon>Cashier.cs</DependentUpon>
     </Compile>
-    <Compile Include="Bank\BNI\Exceptions\PcscException.cs" />
-    <Compile Include="Bank\BNI\Exceptions\ReaderException.cs" />
+    <Compile Include="ReaderDevice\Exceptions\PcscException.cs" />
+    <Compile Include="ReaderDevice\Exceptions\ReaderException.cs" />
     <Compile Include="DB\DBConnect.cs" />
     <Compile Include="Forms\DatabaseConfig.cs">
       <SubType>Form</SubType>
