--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -76,8 +76,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\base\DataResponse.cs" />
-    <Compile Include="API\DataResponseArray.cs" />
-    <Compile Include="API\DataResponseObject.cs" />
+    <Compile Include="API\base\DataResponseArray.cs" />
+    <Compile Include="API\base\DataResponseObject.cs" />
+    <Compile Include="API\response\Barcode.cs" />
     <Compile Include="API\RESTAPI.cs" />
     <Compile Include="Bank\BNI\BNI.cs" />
     <Compile Include="Card\Mifare\Card.cs" />
@@ -161,6 +162,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\DatabaseConfig.resx">
       <DependentUpon>DatabaseConfig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LostTicket.resx">
+      <DependentUpon>LostTicket.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SignIn.resx">
       <DependentUpon>SignIn.cs</DependentUpon>
