--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -75,11 +75,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="API\base\DataResponse.cs" />
-    <Compile Include="API\base\DataResponseArray.cs" />
-    <Compile Include="API\base\DataResponseObject.cs" />
+    <Compile Include="API\response\base\DataResponse.cs" />
+    <Compile Include="API\response\base\DataResponseArray.cs" />
+    <Compile Include="API\response\base\DataResponseObject.cs" />
     <Compile Include="API\request\SignInRequest.cs" />
     <Compile Include="API\response\Barcode.cs" />
+    <Compile Include="API\response\Gate.cs" />
     <Compile Include="API\RESTAPI.cs" />
     <Compile Include="Bank\BNI\BNI.cs" />
     <Compile Include="Card\Mifare\Card.cs" />
