added a check gate feature while signing in into application.

--- a/BNITapCash/App.config
+++ b/BNITapCash/App.config
@@ -55,6 +55,12 @@
             <setting name="LiveCameraPassword" serializeAs="String">
                 <value />
             </setting>
+            <setting name="GateID" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="GateName" serializeAs="String">
+                <value />
+            </setting>
         </BNITapCash.Properties.Settings>
     </userSettings>
 </configuration>
