added feature : - reprint ticket - print report by signed-in operator - fix bug live camera doesn't display

--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -76,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\request\ParkingOutRequest.cs" />
+    <Compile Include="API\request\PrintReportRequest.cs" />
     <Compile Include="API\request\RequestFareRequest.cs" />
     <Compile Include="API\response\base\DataResponse.cs" />
     <Compile Include="API\response\base\DataResponseArray.cs" />
