--- a/BNITapCash/App.config
+++ b/BNITapCash/App.config
@@ -50,7 +50,7 @@
                 <value>0</value>
             </setting>
             <setting name="LiveCameraUsername" serializeAs="String">
-                <value>admin</value>
+                <value />
             </setting>
             <setting name="LiveCameraPassword" serializeAs="String">
                 <value />
