--- a/BNITapCash/Properties/Settings.settings
+++ b/BNITapCash/Properties/Settings.settings
@@ -42,7 +42,7 @@
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="LiveCameraUsername" Type="System.String" Scope="User">
-      <Value Profile="(Default)">admin</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="LiveCameraPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
