--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -93,6 +93,12 @@
     <Compile Include="Card\Mifare\Card.cs" />
     <Compile Include="Card\Mifare\MifareCard.cs" />
     <Compile Include="Constant\Constant.cs" />
+    <Compile Include="Forms\FreePass.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FreePass.Designer.cs">
+      <DependentUpon>FreePass.cs</DependentUpon>
+    </Compile>
     <Compile Include="ReaderDevice\Pcsc\Apdu.cs" />
     <Compile Include="ReaderDevice\Pcsc\Helper.cs" />
     <Compile Include="ReaderDevice\Pcsc\PcscProvider.cs" />
@@ -171,6 +177,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\DatabaseConfig.resx">
       <DependentUpon>DatabaseConfig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FreePass.resx">
+      <DependentUpon>FreePass.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\LostTicket.resx">
       <DependentUpon>LostTicket.cs</DependentUpon>
