added new feature : Free Pass Menu

--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -74,7 +74,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\request\FineFareRequest.cs" />
+    <Compile Include="API\request\FreePassRequest.cs" />
     <Compile Include="API\request\LostTicketRequest.cs" />
+    <Compile Include="API\request\ParkingOutFreePassRequest.cs" />
     <Compile Include="API\request\ParkingOutRequest.cs" />
     <Compile Include="API\request\PrintReportRequest.cs" />
     <Compile Include="API\request\RequestFareRequest.cs" />
