--- a/BNITapCash/packages.config
+++ b/BNITapCash/packages.config
@@ -3,4 +3,8 @@
   <package id="AForge" version="2.2.5" targetFramework="net471" />
   <package id="AForge.Video" version="2.2.5" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net471" />
+  <package id="VideoLAN.LibVLC.Windows" version="3.0.8.1" targetFramework="net471" />
+  <package id="Vlc.DotNet.Core" version="3.0.0" targetFramework="net471" />
+  <package id="Vlc.DotNet.Core.Interops" version="3.0.0" targetFramework="net471" />
+  <package id="Vlc.DotNet.Forms" version="3.0.0" targetFramework="net471" />
 </packages>
