update feature streaming using RTSP in some windows forms.

--- a/BNITapCash/App.config
+++ b/BNITapCash/App.config
@@ -22,7 +22,7 @@
             <setting name="RememberMe" serializeAs="String">
                 <value />
             </setting>
-            <setting name="IPAddressLiveCamera" serializeAs="String">
+            <setting name="UriAddressLiveCamera" serializeAs="String">
                 <value />
             </setting>
             <setting name="DBHost" serializeAs="String">
@@ -48,12 +48,6 @@
             </setting>
             <setting name="WebcamHeight" serializeAs="String">
                 <value>0</value>
-            </setting>
-            <setting name="LiveCameraUsername" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="LiveCameraPassword" serializeAs="String">
-                <value />
             </setting>
             <setting name="GateID" serializeAs="String">
                 <value>0</value>
