--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -37,13 +37,12 @@
     <ApplicationIcon>app_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AForge">
-      <HintPath>..\..\DLL\AForge.dll</HintPath>
-    </Reference>
-    <Reference Include="AForge.Video">
+    <Reference Include="AForge.Video, Version=2.2.5.0, Culture=neutral, PublicKeyToken=cbfb6e07d173c401, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\DLL\AForge.Video.dll</HintPath>
     </Reference>
-    <Reference Include="AForge.Video.DirectShow">
+    <Reference Include="AForge.Video.DirectShow, Version=2.2.5.0, Culture=neutral, PublicKeyToken=61ea4348d43881b7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\DLL\AForge.Video.DirectShow.dll</HintPath>
     </Reference>
     <Reference Include="BNITapCashDLL">
@@ -117,6 +116,7 @@
     <Compile Include="Classes\Forms\PassKadeIn.Designer.cs">
       <DependentUpon>PassKadeIn.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\Helper\IpCameraHelper.cs" />
     <Compile Include="Classes\Interface\EventFormHandler.cs" />
     <Compile Include="Classes\ReaderDevice\Pcsc\Apdu.cs" />
     <Compile Include="Classes\ReaderDevice\Pcsc\Helper.cs" />
