update feature : added snapshot image of IP Camera and update setting from server.

--- a/BNITapCash/App.config
+++ b/BNITapCash/App.config
@@ -58,6 +58,18 @@
             <setting name="GateType" serializeAs="String">
                 <value />
             </setting>
+            <setting name="UriSnapshotLiveCamera" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="WebcamEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="LiveCameraWidth" serializeAs="String">
+                <value>480</value>
+            </setting>
+            <setting name="LiveCameraHeight" serializeAs="String">
+                <value>360</value>
+            </setting>
         </BNITapCash.Properties.Settings>
     </userSettings>
 </configuration>
