--- a/BNITapCash/BNITapCash.csproj
+++ b/BNITapCash/BNITapCash.csproj
@@ -120,6 +120,12 @@
     <Compile Include="Classes\Forms\PassKadeIn.Designer.cs">
       <DependentUpon>PassKadeIn.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\Forms\PassKadeOut.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\Forms\PassKadeOut.Designer.cs">
+      <DependentUpon>PassKadeOut.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Helper\IpCameraHelper.cs" />
     <Compile Include="Classes\Interface\EventFormHandler.cs" />
     <Compile Include="Classes\ReaderDevice\Pcsc\Apdu.cs" />
